--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             // event listener for window object
             window.addEventListener('devicemotion', function (event) {
 
-                if(event.accelerationIncludingGravity !== null) {
-                    output.innerHTML = "Przyśpieszenie wynosi" + event.accelerationIncludingGravity.x;
+                if(event.acceleration !== null) {
+                    output.innerHTML = "Przyśpieszenie wynosi" + event.acceleration.x;
                 } 
             }, false);
         }, false);
